fix computed column alignment (Kibana 7.11+)

--- a/public/agg_table/_agg_table.scss
+++ b/public/agg_table/_agg_table.scss
@@ -22,6 +22,20 @@ kbn-enhanced-agg-table-group {
   .kbnTableCellFilter {
     background-color: $euiColorLightestShade;
   }
+
+  .text-left {
+    text-align: left;
+  }
+  .text-right {
+    text-align: right;
+  }
+  .text-center {
+    text-align: center;
+  }
+  .text-justify {
+    text-align: justify;
+  }
+
 }
 
 .kbnAggTable__controls {
