--- a/public/enhanced-table-vis.scss
+++ b/public/enhanced-table-vis.scss
@@ -63,17 +63,4 @@
     margin-top: 16px;
   }
 
-  .text-left {
-    text-align: left;
-  }
-  .text-right {
-    text-align: right;
-  }
-  .text-center {
-    text-align: center;
-  }
-  .text-justify {
-    text-align: justify;
-  }
-
 }
